# project

./: README.md  pyproject.toml  ΕΠΕΞΕΡΓΑΣΙΑ ΦΥΣΙΚΗΣ ΓΛΩΣΣΑΣ.docx
data/: texts.txt
src/: main.py
src/reconstruction/: custom.py  grammar_tools.py  main.py  t5_pipeline.py
